<resources>
    <string name="app_name">KalkulatorMedic</string>
    <string name="tip_amount">Tip amount: %s</string>
    <string name="chooseMessage">Choose a tip:</string>
    <string name="optionOne">10%</string>
    <string name="optionTwo">7%</string>
    <string name="optionThree">5%</string>
    <string name="roundedTipQuestion">Round up the tip?</string>
    <string name="calculateTip">Calculate</string>
    <string name="tipAmount">Tip amount</string>
    <string name="hint">Bill for service</string>
    <string name="font">Font</string>
</resources>