<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"

    tools:context=".MainActivity">

    <EditText
        android:id="@+id/bill"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        android:textColor="#AA60C8"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textColorHint="#5FAA60C8"
        android:inputType="number"
        android:hint="@string/hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/serviceQuestion"
        android:layout_marginStart="22dp"
        android:textSize="16sp"
        android:textColor="#AA60C8"
        android:textStyle="bold"
        android:text="@string/chooseMessage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/tipOptions"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/serviceQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/tenPercent"
            android:textSize="16sp"
            android:textColor="#AA60C8"
            android:textStyle="bold"
            android:text="@string/optionOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/sevenPercent"
            android:textSize="16sp"
            android:textColor="#AA60C8"
            android:textStyle="bold"
            android:text="@string/optionTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:id="@+id/fivePercent"
            android:textSize="16sp"
            android:textColor="#AA60C8"
            android:textStyle="bold"
            android:text="@string/optionThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

    <Switch
        android:id="@+id/roundedTip"
        android:thumbTint="#AA60C8"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="20dp"
        android:text="@string/roundedTipQuestion"
        android:textSize="16sp"
        android:textColor="#AA60C8"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tipOptions"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/calculateButton"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:backgroundTint="#AA60C8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/calculateTip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roundedTip" />

    <TextView
        android:id="@+id/result"
        android:layout_marginStart ="22dp"
        android:layout_marginTop="10dp"
        android:textColor="#AA60C8"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="@string/tipAmount"
        app:layout_constraintTop_toBottomOf="@id/calculateButton"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/piggy_bank"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <SeekBar
        android:id="@+id/fontSize"
        android:layout_marginTop="50dp"
        android:thumbTint="#AA60C8"
        android:layout_marginStart="20dp"
        android:max="30"
        android:progress="16"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
